--- a/reference.html
+++ b/reference.html
@@ -7,16 +7,12 @@
     <title>References - Healthcare Scheduler</title>
     <link rel="stylesheet" href="css/halodoc-theme.css" />
   </head>
-  <body>
+  <body class="page-reference">
     <!-- ===== Navbar ===== -->
     <nav class="navbar">
       <div class="navbar-container">
         <a href="index.html" class="navbar-logo">
-          <svg viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"
-            />
-          </svg>
+          <img src="images/Logo.png" alt="Logo" style="height: 32px" />
           Healthcare Scheduler
         </a>
 
@@ -51,41 +47,10 @@
     </nav>
 
     <!-- ===== Page Header ===== -->
-    <section class="hero" style="padding: 50px 0">
+    <section class="hero" style="padding: 80px 0">
       <div class="container">
-        <h1>References</h1>
-        <p>Research papers and citations supporting this work</p>
-      </div>
-    </section>
-
-    <!-- ===== Instructions ===== -->
-    <section class="section-sm">
-      <div class="container">
-        <div
-          class="card"
-          style="
-            max-width: 900px;
-            margin: 0 auto;
-            background: linear-gradient(
-              135deg,
-              rgba(216, 18, 42, 0.05),
-              rgba(255, 165, 0, 0.05)
-            );
-          "
-        >
-          <h3 class="card-header">📝 Instructions</h3>
-          <div class="card-body">
-            <p>
-              This page contains placeholders for your research references.
-              Please fill in the details below with the actual journal articles,
-              conference papers, and other sources you used in your research.
-            </p>
-            <p style="margin-bottom: 0">
-              <strong>To update:</strong> Edit the HTML or add your references
-              dynamically as needed.
-            </p>
-          </div>
-        </div>
+        <h1>Referensi</h1>
+        <p>Makalah penelitian dan kutipan yang mendukung proyek ini</p>
       </div>
     </section>
 
@@ -98,7 +63,7 @@
             <div class="card">
               <div class="flex-between mb-2">
                 <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
+                  style="color: #5dade2; font-weight: 700; font-size: 1.1rem"
                   >[1]</span
                 >
                 <span
@@ -116,16 +81,28 @@
                 class="card-header"
                 style="font-size: 1.1rem; margin-bottom: 12px"
               >
-                <em>[Your paper title here]</em>
+                <em
+                  >Optimasi parameter Support Vector Machine dengan algoritma
+                  genetika untuk analisis sentimen pada media sosial
+                  Instagram</em
+                >
               </h3>
               <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
+                <p>
+                  <strong>Authors:</strong>
+                  <em
+                    >[Darmawan, I. P. D. W., Pradnyana, G. A., & Pascima, I. B.
+                    N.]</em
+                  >
+                </p>
                 <p>
                   <strong>Journal/Conference:</strong>
-                  <em>[Publication venue]</em>
+                  <em>[SINTECH Journal]</em>
                 </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
+                <p><strong>Year:</strong> <em>[2023]</em></p>
+                <p>
+                  <strong>DOI/URL:</strong> <em>[https://doi.org/10.31598]</em>
+                </p>
               </div>
             </div>
 
@@ -133,7 +110,7 @@
             <div class="card">
               <div class="flex-between mb-2">
                 <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
+                  style="color: #5dade2; font-weight: 700; font-size: 1.1rem"
                   >[2]</span
                 >
                 <span
@@ -151,16 +128,28 @@
                 class="card-header"
                 style="font-size: 1.1rem; margin-bottom: 12px"
               >
-                <em>[Your paper title here]</em>
+                <em
+                  >Patient assignment optimization in cloud healthcare systems:
+                  A distributed genetic algorithm</em
+                >
               </h3>
               <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
+                <p>
+                  <strong>Authors:</strong>
+                  <em
+                    >[X, Pang, Y.-F., Wang, K., Traina, A. J. M., & Wang,
+                    H.]</em
+                  >
+                </p>
                 <p>
                   <strong>Journal/Conference:</strong>
-                  <em>[Publication venue]</em>
+                  <em>[Health Information Science and Systems]</em>
                 </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
+                <p><strong>Year:</strong> <em>[2023]</em></p>
+                <p>
+                  <strong>DOI/URL:</strong>
+                  <em>[https://doi.org/10.1007/s13755-023-00230-1]</em>
+                </p>
               </div>
             </div>
 
@@ -168,7 +157,7 @@
             <div class="card">
               <div class="flex-between mb-2">
                 <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
+                  style="color: #5dade2; font-weight: 700; font-size: 1.1rem"
                   >[3]</span
                 >
                 <span
@@ -179,41 +168,6 @@
                     font-size: 0.85rem;
                     color: #666;
                   "
-                  >Conference Paper</span
-                >
-              </div>
-              <h3
-                class="card-header"
-                style="font-size: 1.1rem; margin-bottom: 12px"
-              >
-                <em>[Your paper title here]</em>
-              </h3>
-              <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
-                <p>
-                  <strong>Journal/Conference:</strong>
-                  <em>[Publication venue]</em>
-                </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
-              </div>
-            </div>
-
-            <!-- Reference 4 -->
-            <div class="card">
-              <div class="flex-between mb-2">
-                <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
-                  >[4]</span
-                >
-                <span
-                  style="
-                    background: #f5f5f5;
-                    padding: 4px 12px;
-                    border-radius: 6px;
-                    font-size: 0.85rem;
-                    color: #666;
-                  "
                   >Journal Article</span
                 >
               </div>
@@ -221,144 +175,23 @@
                 class="card-header"
                 style="font-size: 1.1rem; margin-bottom: 12px"
               >
-                <em>[Your paper title here]</em>
+                <em
+                  >Optimasi algoritma C4.5 menggunakan algoritma genetika untuk
+                  prediksi penyakit hepatitis</em
+                >
               </h3>
               <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
+                <p><strong>Authors:</strong> <em>[Septiani, W. D.]</em></p>
                 <p>
                   <strong>Journal/Conference:</strong>
                   <em>[Publication venue]</em>
                 </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
-              </div>
-            </div>
-
-            <!-- Reference 5 -->
-            <div class="card">
-              <div class="flex-between mb-2">
-                <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
-                  >[5]</span
-                >
-                <span
-                  style="
-                    background: #f5f5f5;
-                    padding: 4px 12px;
-                    border-radius: 6px;
-                    font-size: 0.85rem;
-                    color: #666;
-                  "
-                  >Book Chapter</span
-                >
-              </div>
-              <h3
-                class="card-header"
-                style="font-size: 1.1rem; margin-bottom: 12px"
-              >
-                <em>[Your paper title here]</em>
-              </h3>
-              <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
+                <p><strong>Year:</strong> <em>[2020]</em></p>
                 <p>
-                  <strong>Journal/Conference:</strong>
-                  <em>[Publication venue]</em>
+                  <strong>DOI/URL:</strong>
+                  <em>[https://doi.org/10.33480/inti.v15i1.1421]</em>
                 </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
               </div>
-            </div>
-
-            <!-- Reference 6 -->
-            <div class="card">
-              <div class="flex-between mb-2">
-                <span
-                  style="color: #d8122a; font-weight: 700; font-size: 1.1rem"
-                  >[6]</span
-                >
-                <span
-                  style="
-                    background: #f5f5f5;
-                    padding: 4px 12px;
-                    border-radius: 6px;
-                    font-size: 0.85rem;
-                    color: #666;
-                  "
-                  >Journal Article</span
-                >
-              </div>
-              <h3
-                class="card-header"
-                style="font-size: 1.1rem; margin-bottom: 12px"
-              >
-                <em>[Your paper title here]</em>
-              </h3>
-              <div class="card-body">
-                <p><strong>Authors:</strong> <em>[Author names]</em></p>
-                <p>
-                  <strong>Journal/Conference:</strong>
-                  <em>[Publication venue]</em>
-                </p>
-                <p><strong>Year:</strong> <em>[2023/2024]</em></p>
-                <p><strong>DOI/URL:</strong> <em>[DOI or URL link]</em></p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Add More References Note -->
-          <div
-            class="card mt-4"
-            style="text-align: center; background: #f5f5f5"
-          >
-            <div class="card-body">
-              <p style="margin: 0; color: #666">
-                <strong>Need more references?</strong> Copy the card structure
-                above and add additional reference entries as needed.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ===== Citation Formats ===== -->
-    <section class="section bg-light">
-      <div class="container">
-        <div style="max-width: 800px; margin: 0 auto">
-          <h2 class="text-center mb-3">Citation Format Examples</h2>
-          <div class="card">
-            <div class="card-body">
-              <p><strong>IEEE Format:</strong></p>
-              <p
-                style="
-                  color: #666;
-                  font-size: 0.9rem;
-                  padding: 12px;
-                  background: white;
-                  border-radius: 6px;
-                  font-family: 'Courier New', monospace;
-                "
-              >
-                [1] A. Author, B. Author, and C. Author, "Paper Title,"
-                <em>Journal Name</em>, vol. X, no. Y, pp. ZZZ-ZZZ, Month Year,
-                doi: 10.xxxx/xxxxx.
-              </p>
-
-              <p class="mt-3"><strong>APA Format:</strong></p>
-              <p
-                style="
-                  color: #666;
-                  font-size: 0.9rem;
-                  padding: 12px;
-                  background: white;
-                  border-radius: 6px;
-                  font-family: 'Courier New', monospace;
-                "
-              >
-                Author, A., Author, B., & Author, C. (Year). Paper title.
-                <em>Journal Name, Volume</em>(Issue), pages.
-                https://doi.org/10.xxxx/xxxxx
-              </p>
             </div>
           </div>
         </div>
@@ -372,13 +205,13 @@
           <div class="footer-section">
             <h4>Healthcare Scheduler</h4>
             <p>
-              Advanced optimization platform for cloud healthcare patient-doctor
-              scheduling using distributed genetic algorithms.
+              Optimasi penjadwalan pasien-dokter menggunakan algoritma genetik
+              dan teknik optimasi evolusi.
             </p>
           </div>
 
           <div class="footer-section">
-            <h4>Contact</h4>
+            <h4>Kontak</h4>
             <p>📧 contact@healthscheduler.com</p>
             <p>📱 +62 xxx xxxx xxxx</p>
             <div class="footer-social">
@@ -407,10 +240,7 @@
         </div>
 
         <div class="footer-bottom">
-          <p>
-            &copy; 2024 Healthcare Scheduler Project. Cloud Healthcare
-            Optimization Research.
-          </p>
+          <p>&copy; 2025 Healthcare Scheduler Project.</p>
         </div>
       </div>
     </footer>
